--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.project
+*.classpath
+RainyHills/.settings/org.eclipse.core.resources.prefs
+RainyHills/RainyHills-API/.settings/
+RainyHills/.settings/
+RainyHills/RainyHills-Services/.settings/
+RainyHills/RainyHills-Services-Tests/.settings/
+RainyHills-Frontend-Angular/.settings/
+RainyHills/RainyHills-Services/.gitignore
+RainyHills/RainyHills-Services-Tests/.gitignore
+RainyHills/RainyHills-API/.gitignore
+RainyHills-Frontend-Angular/.gitignore
