--- a/RainyHills/RainyHills-API/pom.xml
+++ b/RainyHills/RainyHills-API/pom.xml
@@ -1,15 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <groupId>com.rainyhills</groupId>
-    <artifactId>RainyHills</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  
-  <groupId>com.rainyhills.api</groupId>
-  <artifactId>RainyHills-API</artifactId>
-  <name>RainyHills-API</name>
-  <description>This module is part of Rainy Hills Application and is responsible for expose the interface between the external consumers and internal services.</description>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>com.rainyhills</groupId>
+		<artifactId>RainyHills</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
+	<groupId>com.rainyhills.api</groupId>
+	<artifactId>RainyHills-API</artifactId>
+	<name>RainyHills-API</name>
+	<description>This module is part of Rainy Hills Application and is responsible for expose the interface between the external consumers and internal services.</description>
+
 </project>
